# AbyssWatcher

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  GEMINI.md  README.md  app_state.json  multi_character_ui_patch.md  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
.vimban/entries/: 20c273e5-9ba3-4dd9-b358-e1b8e766744f.md  3540b629-8f79-470d-a94e-c8bbb8db0081.md  424c6d1f-9d06-4c01-b0d9-a387f1c53607.md  63f65ef4-ae0c-4fe2-a5a6-60b1cc742e43.md  b99efe42-bf22-4d0f-a586-0fa31341ce11.md  d754ff34-f5cb-435c-85d1-f959cba4b5fb.md
capabilities/: default.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/alphabetical_sorting_20260101/: plan.md
conductor/archive/backend_refactor_20251231/: plan.md
conductor/archive/code_review_20251224/: audit_report.md  metadata.json  plan.md  spec.md
conductor/archive/configurable_settings_20251231/: plan.md  spec.md
conductor/archive/detailed_metrics_20251231/: plan.md  spec.md
conductor/archive/fix_character_totals_and_persistence_20260101/: plan.md
conductor/archive/performance_optimization_20251231/: spec.md
conductor/archive/tauri_migration_20251224/: metadata.json  spec.md
conductor/archive/tauri_review_20251231/: plan.md  spec.md
conductor/archive/ui_cap_neut_20251231/: plan.md  spec.md
conductor/archive/ui_polish_20251231/: spec.md
demo_logs/: 20250101_120000_Demo.txt  20250101_120000_Demo2.txt  20250101_120000_Demo3.txt
icons/: icon.icns
src/: app.rs  lib.rs  main.rs  overlay.rs  overlay_egui.rs  overlay_gpui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/core/: analysis.rs  bench_analysis.rs  config.rs  coordinator.rs  discovery.rs  inline_bookmarks.rs  log_io.rs  mod.rs  model.rs  parser.rs  replay_engine.rs  sim_test.rs  state.rs  tracker.rs  watcher.rs
testlogs/: Local_20260103_221423_96470188.txt
ui/: components.js  index.html  main.js  package.json  pnpm-lock.yaml  replay.html  replay.js  vite.config.ts
ui/components/: index.js
ui/src/: App.tsx  types.ts
ui/styles/: common.css  main.css  theme.css
ui_legacy/: components.js  index.html  main.js  replay.html
ui_legacy/styles/: common.css  main.css  replay.css
(+57 files in other folders)
