[package]
name = "abyss-watcher"
version = "0.1.0"
authors = ["Felix Allistar <147667330+FelixAllistar@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

 [dependencies]
 dioxus = { version = "0.7.0-rc.1", features = ["desktop"] }
 dioxus-desktop = "0.7.0-rc.1"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
lazy_static = "1.5.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
  tokio = { version = "1.0", features = ["full"] }
  tao = "0.34"



[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
