[package]
name = "abyss-watcher"
version = "0.1.0"
 authors = ["Felix Allistar <147667330+FelixAllistar@users.noreply.github.com>"]
 edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

 [dependencies]
lazy_static = "1.5.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
chrono = "0.4.20"
regex = "1.5.5"
  tokio = { version = "1.0", features = ["full"] }
  tao = "0.34"
eframe = { version = "0.27", default-features = true }
egui_plot = "0.27.2"

[dev-dependencies]
tempfile = "3.3"

[features]
default = []
