[package]
name = "abyss-watcher"
version = "0.1.8"
authors = ["Felix Allistar <147667330+FelixAllistar@users.noreply.github.com>"]
edition = "2021"
description = "AbyssWatcher Tauri Frontend"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri-plugin-updater = "2"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.20"
regex = "1.5.5"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2.4.2"
rodio = "0.21.1"
tauri-plugin-process = "2"

[lib]
name = "abyss_watcher"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tempfile = "3"

[features]
default = []

[target."cfg(desktop)".dependencies]
tauri-plugin-process = "2.3.1"
